--- a/templates/index.html
+++ b/templates/index.html
@@ -58,12 +58,13 @@
                     {% endfor %}
                 </div>
             </div>
+            <div id="verticle-line"></div>
             <div class="amenities">
                 <div class="title">
                     <span class="text">Amenities</span>
                     <span class="selected" state="hide">
                         <span class="count">0</span>
-                        <span>selected</span>
+                        <span class="select-text">selected</span>
                     </span>
                 </div>
                 <div class="choice">
