--- a/templates/header.html
+++ b/templates/header.html
@@ -1,9 +1,17 @@
 <header>
-    <div class="content">
-        <div class="title">Welcome to the HBnB Listings site!</div>
-        <div class="subtitle">Find your perfect vacation getaway!</div>
+    <div class="logo">
+        <img src="/static/img/logo.png" alt="home logo"> 
+    </div>
+    <div class="content">       
+        <div class="title">Welcome to the H*H Listings site!</div>
+        <div class="subtitle">Find your perfect vacation getaway        
+            <span><i class="fa fa-home" aria-hidden="true"></i></span>
+        </div>
+
     </div>
     <div class="status">
-        <a href="/admin">Admin area</a>
+        <!-- <i class="fa fa-user-circle" aria-hidden="true"></i> -->
+        <i class="fa fa-database" aria-hidden="true"></i>
+        <a href="/admin">Admin</a>
     </div>
 </header>
