--- a/templates/index.html
+++ b/templates/index.html
@@ -126,6 +126,7 @@
             </div>
         </form>
     </section>
+    <!-- 354 css #results -->
     <section id="results">
         {% if places %}
             {% include "results.html" %}
