--- a/templates/results.html
+++ b/templates/results.html
@@ -9,29 +9,44 @@
                 <ul>
                 {% for place in places[country_name][city_name] %}
                     <li class="place">
-                        <div class="name">{{ place.name }}</div>
-                        <div class="details">
-                            <div class="price">
-                                <div class="digits">${{ place.price_per_night }}</div>
-                                <div class="pax">per pax per night</div>
+                        <div class="place-img">
+                            <img src="/static/img/house-shore-sea.jpg" alt="hotel photo">
+                        </div>
+                        <div class="place-section">
+                            <div class="name-accommodations">
+                                <span>
+                                    <div class="name">{{ place.name }}</div>
+                                    <div class="accommodations">
+                                        <span class="rooms"><i class="fa-solid fa-house"></i>{{ place.number_of_rooms }}</span>
+                                        <span class="bathrooms"><i class="fa-solid fa-bath"></i>{{ place.number_of_bathrooms }}</span>
+                                        <span class="guests"><i class="fa-solid fa-person"></i>{{ place.max_guests }}</span>
+                                    </div>
+                                </div>
+                            </span>                         
+                            <div class="amenities-price">
+                                <div class="amenities">
+                                    {% if place.amenities %}
+                                        {% for amenity in place.amenities %}
+                                        <span>{{ amenity }}</span>
+                                        {% endfor %}
+                                    {% else %}
+                                        No amenities!
+                                    {% endif %}
+                                </div>
+                                <div class="price">
+                                    <span>
+                                        <div class="digits">${{ place.price_per_night }}</div>
+                                        <div class="pax">per night</div>
+                                    </span>
+                                </div>
                             </div>
-                            <div class="description">{{ place.description }}</div>
-                            <div class="address" latitude="{{ place.latitude }}" longitude="{{ place.longitude }}">
-                                <span class="text">{{ place.address }}</span>
-                            </div>
-                            <div class="amenities">
-                                {% if place.amenities %}
-                                    {% for amenity in place.amenities %}
-                                    <span>{{ amenity }}</span>
-                                    {% endfor %}
-                                {% else %}
-                                    No amenities!
-                                {% endif %}
-                            </div>
-                            <div class="accommodations">
-                                <span class="rooms"><i class="fa-solid fa-house"></i>{{ place.number_of_rooms }}</span>
-                                <span class="bathrooms"><i class="fa-solid fa-bath"></i>{{ place.number_of_bathrooms }}</span>
-                                <span class="guests"><i class="fa-solid fa-person"></i>{{ place.max_guests }}</span>
+                            <div class="details">
+                                <details>
+                                    <summary>Review</summary>
+                                        <p><div class="description">{{ place.description }}</div></p>
+                                </details>
+                                <div class="address" latitude="{{ place.latitude }}" longitude="{{ place.longitude }}"></div>
+                                <div class="text"><i  class="fa fa-home" aria-hidden="true"></i>{{ place.address }}</div>
                             </div>
                         </div>
                     </li>
